src/objects/BOMSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>JIRA_PROCESSING_DATE__c</fullName>
        <description>The Date parameter to process records on JIRA Device integration</description>
        <label>JIRA PROCESSING DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Log_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Log Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_By_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Process By Date</label>
        <type>Checkbox</type>
    </fields>
    <label>BOMSettings</label>
</CustomObject>